--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <h1>sulistyaning indah</h1>
     <p>siswa sma yang tertarik dengan teknologi dan desain.
     selamat datang di webside pertama saya!</p>
-    <a
-      href="https://www.instagram.com/usernameanda">kunjungi
-      instagram saya</a>
+    <a href="https://www.instagram.com/usernameanda">kunjungi instagram saya</a>
     <button id="sapabutton"?>sapa saya!</button>
     </div>
     <scrip src="script.js"></scrip>
