--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <div class="kartu profil">
     <img src="foto-profil.jpg" alt="fotoprofil saya">
     <h1>sulistyaning indah</h1>
-    <p>siswa sma yang tertarik dengan teknologi dan desain.
-    selamat datang di webside pertama saya!</p>
+    <p>siswa sma yang tertarik dengan teknologi dan desain. selamat datang di webside pertama saya!</p>
     <a href="https://www.instagram.com/usernameanda">kunjungi instagram saya</a>
-    <button id="sapabutton"?>sapa saya!</button>
+    <button id="sapaButton">sapa saya!</button>
     </div>
     <scrip src="script.js"></scrip>
   </body>
