--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <a href="https://www.instagram.com/usernameanda">kunjungi instagram saya</a>
     <button id="sapaButton">sapa saya!</button>
     </div>
-    <scrip src="script.js"></scrip>
+    <script src="script.js"></script>
   </body>
 </html>
