--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="kartu profil">
+    <div class="kartu-profil">
     <img src="foto-profil.jpg" alt="fotoprofil saya">
     <h1>sulistyaning indah</h1>
-    <p>siswa sma yang tertarik dengan teknologi dan desain. selamat datang di webside pertama saya!</p>
+    <p>siswa sma yang tertarik dengan teknologi dan desain. selamat datang di website pertama saya!</p>
     <a href="https://www.instagram.com/usernameanda">kunjungi instagram saya</a>
     <button id="sapaButton">sapa saya!</button>
     </div>
